--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,13 @@
     <div class="row">
       <div class="col-md-6">
         <ul class="footer-list">
-          <li>Blake Wulfe's Blog</li>
+          <li>Navneet's Blog</li>
         </ul>
       </div>
       <div class="col-md-6">
-        <ul class="footer-list"> 
+        <ul class="footer-list">
           <li>
-          <a href="https://github.com/wulfebw">
+          <a href="https://github.com/nav74neet">
             <span class="icon github">
               <svg version="1.1" class="github-icon-svg" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                  viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
@@ -25,7 +25,7 @@
                 c0,0.208,0.14,0.449,0.534,0.373c3.081-1.028,5.302-3.935,5.302-7.362C15.76,3.906,12.285,0.431,7.999,0.431z"/>
               </svg>
             </span>
-            <span class="username">wulfebw</span>
+            <span class="username">nav74neet</span>
           </a>
         </li>
         </ul>
