--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -1,7 +1,8 @@
 $color-selection: #D6EDFF;
 
 
-$color-text-normal: #3A4145;
+$color-text-normal: #ffffff;
+// #3A4145;
 
 $color-text-header: #2E2E2E;
 
@@ -15,7 +16,8 @@ $color-quote-border: #4A4A4A;
 $color-mark: #fdffb6;
 
 $color-kbd-color: #666;
-$color-kbd-bg: #F4F4F4;
+$color-kbd-bg: #040949;
+// #F4F4F4;
 $color-kbd-bd: #CCC;
 
 $color-table-bd: #EFEFEF;
