--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -3,7 +3,7 @@ $color-selection: #D6EDFF;
 
 $color-text-normal: #3a4145;
 
-$color-text-header: #2E2E2E;
+$color-text-header: #2e2e2e;
 
 $color-text-link: #4A4A4A;
 $color-text-link-hover: #111;
