--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -8,7 +8,7 @@ $color-text-header: #2e2e2e;
 $color-text-link: #4A4A4A;
 $color-text-link-hover: #111;
 
-$color-hr: #EFEFEF;
+$color-hr: #aac9e7;
 
 $color-quote-border: #4A4A4A;
 
