--- a/_sass/_color.scss
+++ b/_sass/_color.scss
@@ -21,5 +21,5 @@ $color-kbd-bd: #CCC;
 $color-table-bd: #EFEFEF;
 $color-table-head-bg: #F6F6F6;
 
-$color-white: #ffffff;
+$color-white: #17292d;
 $color-black: #000000;
