--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -27,6 +27,8 @@
             <a href="{{ site.github.url }}/research.html" class="main-link">
             Research</a>
 
+            <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a>
+
             <a href="https://github.com/{{ author.github }}" class="main-link">
             GitHub</a>
 
@@ -35,10 +37,10 @@
 
             <a href="{{ site.github.url }}/blog.html" class="main-link">
             Blog</a>
-    
-        </div>                                   
-    </div>                                       
-</section>   
+
+        </div>
+    </div>
+</section>
 
 <body class="home-template">
     <div class="site-wrapper">
