--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -27,10 +27,10 @@
             <a href="{{ site.github.url }}/research.html" class="main-link">
             Research</a>
 
-            <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a>
-
             <a href="https://github.com/{{ author.github }}" class="main-link">
             GitHub</a>
+
+            <!-- <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a> -->
 
             <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">
             Resume</a>
