--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
       <li>  <a href="{{ site.github.url }}/" class="main-link">About</a> </li>
       <li>  <a href="{{ site.github.url }}/research.html" class="main-link">Research</a> </li>
       <li>  <a href="https://github.com/{{ author.github }}" class="main-link">GitHub</a> </li>
-      <li>  <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a></li>
+      <li>  <a href="https://www.linkedin.com/in/navneet-paul-94a806101/{{author.linkedin}}" class="main-link">LinkedIn</a></li>
       <li>  <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">Resume</a> </li>
       <li>  <a href="{{ site.github.url }}/blog.html" class="main-link">Blog</a> </li>
     </ul>
