--- a/_sass/about-page.scss
+++ b/_sass/about-page.scss
@@ -21,6 +21,6 @@
         font-weight: 600;
         text-decoration: none;
         color: #fff;
-        text-align: center;
+        text-align: justify;
     }
 }
