--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -30,7 +30,8 @@
             <a href="https://github.com/{{ author.github }}" class="main-link">
             GitHub</a>
 
-            <a href="https://www.linkedin.com/in/navneet-paul-94a806101/{{author.linkedin}}" class="main-link">LinkedIn</a>
+            <a href="https://scholar.google.co.in/citations?user=Wbz-jYwAAAAJ&hl=en/{{author.googlescholar}}" class="main-link">Google Scholar</a>
+            <!-- <a href="https://www.linkedin.com/in/navneet-paul-94a806101/{{author.linkedin}}" class="main-link">LinkedIn</a> -->
             <!-- <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a> -->
 
             <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">
