--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,19 @@
 ---
 layout: default
 ---
+
+<!doctype html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" media="all" href="normalize.css">
+    <link rel="stylesheet" media="all" href="core.css">
+    <link rel="stylesheet" media="all" href="style.css">
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+</head>
+<body data-document>&nbsp;</body>
+</html>
+
 <div class="post">
 
   <header class="post-header">
