--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -32,7 +32,7 @@
 
             <!-- <a href="https://scholar.google.co.in/citations?user=Wbz-jYwAAAAJ&hl=en/{{author.googlescholar}}" class="main-link">Google Scholar</a> -->
 
-            <!-- <a href="https://www.linkedin.com/in/navneet-paul-94a806101/{{author.linkedin}}" class="main-link">LinkedIn</a> -->
+            <a href="https://www.linkedin.com/in/navneet-paul-94a806101/{{author.linkedin}}" class="main-link">LinkedIn</a>
 
             <!-- <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a> -->
 
@@ -42,8 +42,8 @@
             <a href="{{ site.github.url }}/blog.html" class="main-link">
             Blog</a>
 
-            <a href="{{ site.github.url }}/contact.html" class="main-link">
-            Contact</a>
+            <!-- <a href="{{ site.github.url }}/contact.html" class="main-link">
+            Contact</a> -->
 
         </div>
     </div>
