--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -21,8 +21,8 @@
 
         <div class="author-meta">
 
-            <!-- <a href="{{ site.github.url }}/" class="main-link">
-            About</a> -->
+            <a href="{{ site.github.url }}/" class="main-link">
+            About</a>
 
             <a href="{{ site.github.url }}/research.html" class="main-link">
             Research</a>
