--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -36,7 +36,7 @@
 
             <!-- <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a> -->
 
-            <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">
+            <a href="{{ site.github.url }}/resume.html" class="main-link">
             Resume</a>
 
             <a href="{{ site.github.url }}/blog.html" class="main-link">
