--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -24,8 +24,10 @@
             <a href="{{ site.github.url }}/" class="main-link">
             About</a>
 
-            <a href="{{ site.github.url }}/research.html" class="main-link">
-            Research</a>
+            <!-- <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">Resume</a> -->
+
+            <!-- <a href="{{ site.github.url }}/research.html" class="main-link">
+            Research</a> -->
 
             <a href="https://github.com/{{ author.github }}" class="main-link">
             GitHub</a>
@@ -36,7 +38,7 @@
 
             <!-- <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a> -->
 
-            <a href="{{ site.github.url }}/resume.html" class="main-link">
+            <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">
             Resume</a>
 
             <a href="{{ site.github.url }}/blog.html" class="main-link">
