--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -26,8 +26,8 @@
 
             <!-- <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">Resume</a> -->
 
-            <!-- <a href="{{ site.github.url }}/research.html" class="main-link">
-            Research</a> -->
+            <a href="{{ site.github.url }}/research.html" class="main-link">
+            Research</a>
 
             <a href="https://github.com/{{ author.github }}" class="main-link">
             GitHub</a>
