--- a/_sass/index-page.scss
+++ b/_sass/index-page.scss
@@ -4,8 +4,8 @@
 .category {
     width: 90%;
     max-width: 650px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: 50px; #auto
+    margin-right: 50px; #auto
     word-wrap: break-word;
     margin-bottom: 50px;
     padding: 0;
