--- a/_sass/index-page.scss
+++ b/_sass/index-page.scss
@@ -4,8 +4,8 @@
 .category {
     width: 90%;
     max-width: 650px;
-    margin-left: auto; #auto
-    margin-right: auto; #auto
+    margin-left: auto; 
+    margin-right: auto;
     word-wrap: break-word;
     margin-bottom: 50px;
     padding: 0;
