--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -125,7 +125,7 @@
             width: 40px;
             height: 4px;
             background: #eeeeee;
-            margin: 60px auto 0;
+            margin: 100px auto 100px;
         }
     }
 }
