--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -38,8 +38,8 @@
 
             <!-- <a href="https://twitter.com/{{author.twitter}}" class="main-link">Twitter</a> -->
 
-            <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">
-            Resume</a>
+            <a href="{{ site.github.url }}/resume.html" class="main-link">
+            CV</a>
 
             <a href="{{ site.github.url }}/blog.html" class="main-link">
             Blog</a>
