--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
     <div class="row">
       <div class="col-md-6">
         <ul class="footer-list">
-          <li>Navneet's Blog</li>
+          <li>Navneet Paul</li>
         </ul>
       </div>
       <div class="col-md-6">
