--- a/_sass/author.scss
+++ b/_sass/author.scss
@@ -9,10 +9,12 @@
     margin-top: 50px;
 
     &.has-cover {
-        margin-top: -52px;
+        margin-top: -60px;
     }
 
     .img {
+        width: 150px;
+        height: 150px;
         border: 4px solid white;
     }
 }
