--- a/_sass/author.scss
+++ b/_sass/author.scss
@@ -34,12 +34,14 @@
 
 .author-title {
     font-size: 4rem;
+    font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
 }
 
 .author-bio {
     font-size: 2rem;
     font-weight: normal;
     color: #666666;
+    font-family: 'Merriweather', 'Hiragino Sans GB', 'Microsoft YaHei', 'WenQuanYi Micro Hei', sans-serif;
 }
 
 .author-meta {
