--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -44,8 +44,8 @@
             <a href="{{ site.github.url }}/blog.html" class="main-link">
             Blog</a>
 
-            <!-- <a href="{{ site.github.url }}/contact.html" class="main-link">
-            Contact</a> -->
+            <a href="{{ site.github.url }}/contact.html" class="main-link">
+            Contact</a>
 
         </div>
     </div>
