--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
     <ul class="nav navbar-nav">
       <li>  <a href="{{ site.github.url }}/" class="main-link">About</a> </li>
       <li>  <a href="{{ site.github.url }}/research.html" class="main-link">Research</a> </li>
-      <li>  <a href="https://github.com/{{ author.github }}" class="main-link">GitHub</a> </li>
+      <!-- <li>  <a href="https://github.com/{{ author.github }}" class="main-link">GitHub</a> </li> -->
       <!-- <li>  <a href="https://www.linkedin.com/in/navneet-paul-94a806101/{{author.linkedin}}" class="main-link">LinkedIn</a></li> -->
       <!-- <li>  <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">Resume</a> </li> -->
       <li>  <a href="{{ site.github.url }}/resume.html" class="main-link">CV</a> </li>
