--- a/_layouts/headless.html
+++ b/_layouts/headless.html
@@ -29,8 +29,8 @@
             <a href="{{ site.github.url }}/research.html" class="main-link">
             Research</a>
 
-            <a href="https://github.com/{{ author.github }}" class="main-link">
-            GitHub</a>
+            <!-- <a href="https://github.com/{{ author.github }}" class="main-link">
+            GitHub</a> -->
 
             <!-- <a href="https://scholar.google.co.in/citations?user=Wbz-jYwAAAAJ&hl=en/{{author.googlescholar}}" class="main-link">Google Scholar</a> -->
 
