--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,9 +25,9 @@ layout: default
   {{ content }}
   </article>
 
-  <hr class="footer-hr"/>
+  <!-- <hr class="footer-hr"/>
 
-  {% include footer.html %}
+  {% include footer.html %} -->
 
   <!-- mathjax -->
   {% if page.mathjax %}
