--- a/_sass/author.scss
+++ b/_sass/author.scss
@@ -1,7 +1,7 @@
 .author-cover {
     height: 35rem;
     background-size: cover;
-    
+    background-position: ;
     background-repeat: no-repeat;
 }
 
