--- a/_sass/author.scss
+++ b/_sass/author.scss
@@ -1,7 +1,7 @@
 .author-cover {
     height: 35rem;
     background-size: cover;
-    background-position: ;
+    background-position: center;
     background-repeat: no-repeat;
 }
 
@@ -16,6 +16,7 @@
         width: 150px;
         height:150px;
         border: 4px solid white;
+        background-position: center;
     }
 }
 
