--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
       <!-- <li>  <a href="{{ site.github.url }}/assets/resume.pdf" class="main-link">Resume</a> </li> -->
       <li>  <a href="{{ site.github.url }}/resume.html" class="main-link">CV</a> </li>
       <li>  <a href="{{ site.github.url }}/blog.html" class="main-link">Blog</a> </li>
-      <li>  <a href="{{ site.github.url }}/" class="main-link">Contact</a> </li>
+      <li>  <a href="{{ site.github.url }}/contact.html" class="main-link">Contact</a> </li>
         
     </ul>
   </div>
